--- a/shortcodes_window/hotels.yaml
+++ b/shortcodes_window/hotels.yaml
@@ -87,6 +87,7 @@ models:
           minimum: 1
           maximum: 999
           default: 20
+          format: 'input-number'
         city: &city
           type: string
           description: >
